[FEAUTRE] Add basic market list display with mock data

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "golang.go",
         "dunstontc.vscode-go-syntax",
         "premparihar.gotestexplorer",
-        "editorconfig.editorconfig"
+        "editorconfig.editorconfig",
+        "bradlc.vscode-tailwindcss"
     ]
 }
